# dao-bot

./: Cargo.toml  README.md  ava.config.cjs  build.sh  package.json
__tests__/: basic-tests.ava.ts  naj-testing.js
__tests__/auto-registration/: auto-reg-tests.ava.ts  v1-auto-reg-tests.ava.ts
__tests__/ext_wasm/: keypom.wasm  sputnikdao2.wasm
__tests__/utils/: types.ts
neardev/: dev-account  dev-account.env
src/: buy.rs  costs.rs  ext_traits.rs  helper.rs  lib.rs  list.rs  modify-sale.rs  modify_sale.rs  owner.rs  types.rs  view.rs
src-pre-security/: lib.rs
src-skeleton/: ext_traits.rs  lib.rs
src-v1/: lib.rs
src/models/: mod.rs
testing-wasms/: dao_bot_v1.wasm
tests/: basic-test.rs  basic.rs  main.rs
v1/: Cargo.toml
v1/src/: lib.rs
